--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -14,7 +14,7 @@
             <button type="submit" class="btn btn-info">Submit</button>
             </form>
     </div>
-    {{>_formerrors}}
+    {{>_flash}}
 </div>
 </div>
 
