--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -9,20 +9,34 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
+
+      {{#unless user}}
+
       <li class="nav-item active">
         <a class="nav-link" href="/login">Login</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/register">Register</a>
       </li>
+
+      {{else}}
+
     </ul>
-    {{#if username}}
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/profile">{{username}}</a>
+      <li class="nav-item active dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{#each user}} {{username}} {{/each}}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/profile">Profile</a>
+          <a class="dropdown-item" href="/settings">Settings</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/logout">Log Out</a>
+        </div>
       </li>
     </ul>
-    {{/if}}
+
+    {{/unless}}
 
   </div>
 </nav>
