Added Profile Page

--- a/views/partials/_flash.handlebars
+++ b/views/partials/_flash.handlebars
@@ -9,3 +9,9 @@
     {{passportFailure}}
 </div>
 {{/if}}
+
+{{#if registerSuccess}}
+<div class="alert alert-primary">
+    {{registerSuccess}}
+</div>
+{{/if}}
